[tool.poetry]
name = "feeluown-bilibili"
version = "0.1.2"
description = "Bilibili provider for FeelUOwn player."
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
packages = [{ include = "fuo_bilibili" }]
include = ["fuo_bilibili/assets/icon.svg"]

[tool.poetry.dependencies]
python = "^3.10"
feeluown = ">=3.8.7"
cachetools = "*"
beautifulsoup4 = "*"
pycryptodomex = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
PyQt5 = "*"
fuo-dl = "^0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."fuo.plugins_v1"]
"bilibili" = "fuo_bilibili"
